--- a/source/codes/html/_forms.haml
+++ b/source/codes/html/_forms.haml
@@ -4,20 +4,23 @@
   %input{type: 'text'}
   %button{type: 'button'}
     Submit
+.clear
 .textarea
   .label
     Text Area
   %input{type: 'textarea'}
+.clear
+.label
+  Checkboxes
 .checkbox
-  .label
-    Checkboxes
   %input{type: 'checkbox'}
     Option 1
   %input{type: 'checkbox'}
     Option 2
+.clear
+.label
+  Radio Buttons
 .radio_button
-  .label
-    Radio Buttons
   %input{type: 'radio'}
     One
   %input{type: 'radio'}
