--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -14,6 +14,7 @@
 @import monsterstyle/components/forms
 @import monsterstyle/components/buttons
 @import monsterstyle/components/tables
+@import monsterstyle/components/images
 @import monsterstyle/complex_components/button_groups
 @import monsterstyle/complex_components/input_groups
 @import monsterstyle/complex_components/button_dropdowns
@@ -24,6 +25,7 @@
 @import basic_components/tables
 @import basic_components/forms
 @import basic_components/buttons
+@import basic_components/images
 @import complex_components/button_groups
 @import complex_components/button_dropdown
 @import complex_components/input_groups
