--- a/source/stylesheets/monsterstyle/components/forms.sass
+++ b/source/stylesheets/monsterstyle/components/forms.sass
@@ -12,6 +12,10 @@
   :padding $form_padding
   :font-size $form_font_size
   +box-shadow(inset 0 1px 2px rgba(0, 0, 0, 0.18))
+  :float $default-float
+  :margin
+    :right $form_margin_right
+
 
 = form_password_field
   +form_text_field
@@ -19,6 +23,9 @@
 = form_checkbox
   :display inline-block
   :font-size $form_selector_font_size
+  &:not(:first-child)
+    :margin 
+      :left $form_margin_right
 
 = form_textarea
   :outline none
@@ -37,4 +44,6 @@
   input
     :margin 0
     :font-size $form_selector_font_size
-
+    &:not(:first-child)
+      :margin 
+        :left $form_margin_right
