--- a/source/codes/html/_images.haml
+++ b/source/codes/html/_images.haml
@@ -1,11 +1,11 @@
 .label
-  Image Large Rounded
+  Centered Image Large Rounded
 %img.rounded{src: "http://www.coolcota.com/wp-content/uploads/2013/07/Cool-Tent-Designs-We-Love-Main.jpg"}/
 .clear
 .label
-  Image Medium Circle
+  Centered Image Medium Circle
 %img.circle{src: "http://www.coolcota.com/wp-content/uploads/2013/07/Cool-Tent-Designs-We-Love-Main.jpg"}/
 .clear
 .label
-  Image Small Thumbnail
+  Centered Image Small Thumbnail
 %img.thumbnail{src: "http://www.coolcota.com/wp-content/uploads/2013/07/Cool-Tent-Designs-We-Love-Main.jpg"}/
