--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -1,5 +1,6 @@
 @import susy
 @import modular-scale
+@import color-schemer
 @import compass/css3/transition
 @import compass/css3/border-radius
 @import compass/css3/box-shadow
