--- a/source/codes/sass/_images.haml
+++ b/source/codes/sass/_images.haml
@@ -1,10 +1,8 @@
-body.basic_components_images_index
-  .example
-    :text-align center
-    img.rounded
+:plain
+  img.rounded
       +image_rounded_center($image_large, $image_large)
     img.circle
       +image_circle_center($image_medium)
     img.thumbnail
       +image_thumbnail_center($image_small, $image_small)
-  
+
