--- a/source/stylesheets/basic_components/_forms.sass
+++ b/source/stylesheets/basic_components/_forms.sass
@@ -13,4 +13,6 @@
       +form_checkbox
     .radio_button
       +form_radio_button
-
+    .form_inline_box
+      +form_inline_box(500px, $color_primary, darken($color_background, 10%))
+      .form_inline_header
