--- a/source/codes/sass/_forms.haml
+++ b/source/codes/sass/_forms.haml
@@ -12,4 +12,5 @@
     +form_checkbox
   .radio_button
     +form_radio_button
-
+  .form_inline_box
+    +form_inline_box(500px, $color_primary, darken($color_background, 10%))
