--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -65,11 +65,16 @@ $table_line_height      : ms(1)
 
 $table_margin_bottom    : ms(2)
 
-$form_font_size          : ms(0)
-$form_padding            : ms(-2) ms(-1.5)
-$form_border             : 1px solid contrast-color($color_background, darken($color_background, 45%), lighten($color_background, 50%), 60%)
-$form_selector_font_size : ms(-0.5)
-$form_margin_right       : ms(0)
+$form_font_size              : ms(0)
+$form_padding                : ms(-2) ms(-1.5)
+$form_border                 : 1px solid contrast-color($color_background, darken($color_background, 45%), lighten($color_background, 50%), 60%)
+$form_selector_font_size     : ms(-0.5)
+$form_margin_right           : ms(0)
+$form_textarea_height        : ms(3)
+$form_header_font_size       : ms(1)
+$form_element_spacing        : ms(-1)
+$form_inline_padding         : ms(1)
+$form_inline_margin_position : auto
 
 $button_group_radius : ms(-3)
 
