button drop down styling update

--- a/source/stylesheets/complex_components/_button_dropdown.sass
+++ b/source/stylesheets/complex_components/_button_dropdown.sass
@@ -1,2 +1,2 @@
 .button_dropdown
-  +button_dropdown($color_primary, $color_background)
+  +button_dropdown($color_primary, $color_background, $button_dropdown_width)
