--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -45,6 +45,8 @@ $button_font_weight : normal
 $button_font_size   : ms(0)
 $button_padding     : ms(-1)
 
+$button_dropdown_width : ms(4.5)
+
 $table_bg               : $color_background
 $table_even_row_bg      : contrast-color($color_background, darken($color_background, 10%), lighten($color_background, 10%), 60%)
 
