button drop down absolute positioning

--- a/source/stylesheets/monsterstyle/complex_components/button_dropdowns.sass
+++ b/source/stylesheets/monsterstyle/complex_components/button_dropdowns.sass
@@ -13,6 +13,8 @@
       :top 0
   .dropdown_items
     :width $width - 4px
+    :position absolute
+    :z-index 1
     :margin
       :left 2px
   &:hover
