layout and web updates
added default class assignments for quick use and started building more copy and haml versions of code

--- a/source/_codes.html.haml
+++ b/source/_codes.html.haml
@@ -1,7 +1,8 @@
 .codes
   .toggle
-    - names.each do |name|
-      .button{data:{action:"#{name}"}}= name
+    .button_group
+      - names.each do |name|
+        .button{data:{action:"#{name}"}}= name
     .clear
   .clear
   = content
