--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -1,2 +1,4 @@
 .page_heading
   .page_title About
+
+.cta Monster-Style is your favourite Canadian, Javascript-free, HAML/Sass-Focused styling library.
