--- a/source/stylesheets/_code.sass
+++ b/source/stylesheets/_code.sass
@@ -16,9 +16,9 @@
       :color rgb(100,100,100)
       :font-weight 700
       &:hover
-        :color rgb(60,60,60)
+        :color rgb(30,40,70)
       &.active
-        :color rgb(200,0,0)
+        :color rgb(255, 255, 255)
   :border solid 1px rgb(200,200,200)
   :background rgb(248, 248, 248)
   :position relative
@@ -29,4 +29,3 @@
     :display none
     &.active
       :display block
-
