--- a/source/stylesheets/monsterstyle/theme/variables.sass
+++ b/source/stylesheets/monsterstyle/theme/variables.sass
@@ -91,3 +91,7 @@ $image_radius            : ms(1)
 $image_thumbnail_padding : ms(-2)
 $image_border            : 1px solid contrast-color($color_background, darken($color_background, 45%), lighten($color_background, 50%), 60%)
 $image_margin            : ms(1)
+
+
+/* Columns */
+$grid_spacing   : 3%
